--- a/fullbeaconprocess.ipynb
+++ b/fullbeaconprocess.ipynb
@@ -2,35 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "13"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
-    "import cv2 \n",
+    "# import the necessary packages\n",
+    "import numpy as np\n",
+    "import cv2\n",
     "\n",
-    "import numpy as np \n",
+    "# load the image\n",
+    "img = cv2.imread(\"beacons.png\",cv2.IMREAD_COLOR)\n",
+    "lower_range = np.array([110,50,50])\n",
+    "upper_range = np.array([130,255,255])\n",
+    "mask = cv2.inRange(img, lower_range, upper_range)\n",
+    "result = cv2.bitwise_and(img, img, mask = mask)\n",
+    "cv2.imshow(\"result\", result)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
     "\n",
-    "image = cv2.imread('beacons.png') \n",
-    "lower_red = np.array([0, 0, 200], dtype = \"uint8\") \n",
-    "\n",
-    "upper_red= np.array([0, 0, 255], dtype = \"uint8\")\n",
-    "mask = cv2.inRange(image, lower_red, upper_red)\n",
-    "detected_output = cv2.bitwise_and(image, image, mask =  mask) \n",
-    "\n",
-    "cv2.imshow(\"red color detection\", detected_output) \n",
-    "\n",
-    "cv2.waitKey(0) \n"
+    "\n"
    ]
   }
  ],
