beacon colour detecting

--- a/fullbeaconprocess.ipynb
+++ b/fullbeaconprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -15,21 +15,82 @@
     }
    ],
    "source": [
-    "# import the necessary packages\n",
-    "import numpy as np\n",
+    "# Python code for Multiple Color Detection\n",
+    "\n",
     "import cv2\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "from IPython.display import Image\n",
+    "import glob\n",
+    "import math\n",
     "\n",
-    "# load the image\n",
-    "img = cv2.imread(\"beacons.png\",cv2.IMREAD_COLOR)\n",
-    "lower_range = np.array([110,50,50])\n",
-    "upper_range = np.array([130,255,255])\n",
-    "mask = cv2.inRange(img, lower_range, upper_range)\n",
-    "result = cv2.bitwise_and(img, img, mask = mask)\n",
-    "cv2.imshow(\"result\", result)\n",
+    " \n",
+    "input_img = cv2.imread(\"beacons.png\")\n",
+    "img = cv2.resize(input_img, (640, 480))\n",
+    "# Make a copy to draw contour outline\n",
+    "input_image_cpy = img.copy()\n",
+    " \n",
+    "hsv = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
+    " \n",
+    "# define range of red color in HSV\n",
+    "lower_red = np.array([0, 50, 50])\n",
+    "upper_red = np.array([10, 255, 255])\n",
+    " \n",
+    "# define range of green color in HSV\n",
+    "lower_yellow = np.array([20, 100, 100])\n",
+    "upper_yellow = np.array([30, 255, 255])\n",
+    " \n",
+    "# define range of blue color in HSV\n",
+    "lower_blue = np.array([100, 50, 50])\n",
+    "upper_blue = np.array([130, 255, 255])\n",
+    " \n",
+    "# create a mask for red color\n",
+    "mask_red = cv2.inRange(hsv, lower_red, upper_red)\n",
+    " \n",
+    "# create a mask for green color\n",
+    "mask_yellow = cv2.inRange(hsv, lower_yellow, upper_yellow)\n",
+    " \n",
+    "# create a mask for blue color\n",
+    "mask_blue = cv2.inRange(hsv, lower_blue, upper_blue)\n",
+    " \n",
+    "# find contours in the red mask\n",
+    "contours_red, _ = cv2.findContours(mask_red, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    " \n",
+    "# find contours in the green mask\n",
+    "contours_yellow, _ = cv2.findContours(mask_yellow, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    " \n",
+    "# find contours in the blue mask\n",
+    "contours_blue, _ = cv2.findContours(mask_blue, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    " \n",
+    "# loop through the red contours and draw a rectangle around them\n",
+    "for cnt in contours_red:\n",
+    "    contour_area = cv2.contourArea(cnt)\n",
+    "    if contour_area > 1000:\n",
+    "        x, y, w, h = cv2.boundingRect(cnt)\n",
+    "        cv2.rectangle(img, (x, y), (x + w, y + h), (0, 0, 255), 2)\n",
+    "        cv2.putText(img, 'Red', (x, y-10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (0, 0, 255), 2)\n",
+    "     \n",
+    "# loop through the green contours and draw a rectangle around them\n",
+    "for cnt in contours_yellow:\n",
+    "    contour_area = cv2.contourArea(cnt)\n",
+    "    if contour_area > 1000:\n",
+    "        x, y, w, h = cv2.boundingRect(cnt)\n",
+    "        cv2.rectangle(img, (x, y), (x + w, y + h), (0, 255, 255), 2)\n",
+    "        cv2.putText(img, 'Yellow', (x, y-10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (0, 255, 255), 2)\n",
+    " \n",
+    "# loop through the blue contours and draw a rectangle around them\n",
+    "for cnt in contours_blue:\n",
+    "    contour_area = cv2.contourArea(cnt)\n",
+    "    if contour_area > 1000:\n",
+    "        x, y, w, h = cv2.boundingRect(cnt)\n",
+    "        cv2.rectangle(img, (x, y), (x + w, y + h), (255, 0, 0), 2)\n",
+    "        cv2.putText(img, 'Blue', (x, y-10), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (255, 0, 0), 2)\n",
+    " \n",
+    "# Display final output for multiple color detection opencv python\n",
+    "cv2.imshow('image', img)\n",
     "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()\n",
-    "\n",
-    "\n"
+    "cv2.destroyAllWindows()"
    ]
   }
  ],
