--- a/fullbeaconprocess.ipynb
+++ b/fullbeaconprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "import math\n",
     "\n",
     " \n",
-    "input_img = cv2.imread(\"beacons.png\")\n",
+    "input_img = cv2.imread(\"color_detection.png\")\n",
     "img = cv2.resize(input_img, (640, 480))\n",
     "# Make a copy to draw contour outline\n",
     "input_image_cpy = img.copy()\n",
