--- a/fullbeaconprocess.ipynb
+++ b/fullbeaconprocess.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# Python code for Multiple Color Detection\n",
     "\n",
@@ -17,7 +26,7 @@
     "import math\n",
     "\n",
     " \n",
-    "input_img = cv2.imread(\"color_detection.png\")\n",
+    "input_img = cv2.imread(\"beacons.png\")\n",
     "img = cv2.resize(input_img, (640, 480))\n",
     "# Make a copy to draw contour outline\n",
     "input_image_cpy = img.copy()\n",
@@ -26,7 +35,7 @@
     " \n",
     "# define range of red color in HSV\n",
     "lower_red = np.array([0, 50, 50])\n",
-    "upper_red = np.array([10, 255, 255])\n",
+    "upper_red = np.array([20, 255, 255])\n",
     " \n",
     "# define range of green color in HSV\n",
     "lower_yellow = np.array([20, 100, 100])\n",
